# acp245

./: README.md
acp245lib/: AUTHORS  BUILD  LICENSE  Makefile  Makefile.am  Makefile.win  Makefile.win.in  Makefile.wm  Makefile.wm.in  NEWS  README  TODO  acp245-1.0.pc  acp245-1.0.pc.in  acp245.files  acp245.includes  acp245.sln  acp245.spec  acp245.vcproj  acp245_config.h  acp245_config.h.in~  acp245_test.vcproj  autogen.sh  config.status  configure.ac  libtool  stamp-h1
acp245lib/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
acp245lib/doc/: Makefile  Makefile.am  Makefile.in  license  rsa.key  sign.py  verify.py  wm_manifest.xml
acp245lib/doxygen/: doxyfile  doxygen.sty  doxygen_fc10.sty  edantech_header.tex  edantech_header_fc10.tex
acp245lib/python/: Makefile  Makefile.am  Makefile.in  Makefile.win  Makefile.win.in  setup.py
acp245lib/python/src/: Makefile.win  Makefile.win.in  c_pdu.pxd  c_pdu_gen.header.pxd  c_pdu_lib.pxd  log.pyx  pdu.py  pdu_gen.footer.pyx  pdu_gen.header.pyx  stdmsg.py
acp245lib/python/src/test/: test_pdu.py
acp245lib/src/: Makefile  Makefile.am  Makefile.in  Makefile.win  Makefile.win.in  acp245.h  acp245.h.in  acp_el.c  acp_el.h  acp_el_tcu_data.c  acp_el_tcu_data_error.c  acp_err.h  acp_ie.c  acp_ie.h  acp_init.c  acp_init.h  acp_key.c  acp_key.h  acp_license.c  acp_license.h  acp_license_secret.c.inc  acp_msg.c  acp_msg.h  acp_msg_alarm.c  acp_msg_conf.c  acp_msg_func.c  acp_msg_header.c  acp_msg_prov.c  acp_msg_track.c  acp_types.h  hmac_sha256.c  hmac_sha256.h  sha256.c  sha256.h
acp245lib/src/.deps/: acp_el.Plo  acp_ie.Plo  acp_init.Plo  acp_key.Plo  acp_license.Plo  acp_msg.Plo  hmac_sha256.Plo  sha256.Plo
acp245lib/src/wavecom/: acp245_config.h
acp245lib/src/win32/: acp245_config.h
acp245lib/tests/: Makefile  Makefile.am  Makefile.in  Makefile.win  Makefile.win.in  acp245_testall.c  acp_el_test.c  acp_key_test.c  acp_license_test.c  acp_msg_test.c  invalid_format_license.sig  invalid_license.sig  valid_license.sig
acp245lib/tests/cases/: e_conf_test_bad.conf  e_conf_test_def_ok.conf
acp245lib/win32/: installer.nsi
acp245lib/win32/examples/acp245_example/: acp245_example.sln
acp245lib/win32/examples/acp245_example/acp245_example/: ReadMe.txt  acp245_example.c  acp245_example.vcproj
acpyd/: BUILD  COPYING  LICENSE  Makefile  Makefile.win  NEWS  acpemuwx.glade  acpyd.spec  server.pem  setup.py
binaries/: acp245-1.6.3-1fc10.i386.rpm  acp245-docs-1.6.3-1fc10.i386.rpm  acp245-python-1.6.3-1fc10.i386.rpm  acpyd-1.8.2-1.fc10.i386.rpm  e_libs-1.1.0-1fc10.i386.rpm  e_libs-docs-1.1.0-1fc10.i386.rpm
custom_scripts/: client_1_connect_and_wait.py  client_4_activate_immo.py  client_5_deactivate_immo.py  client_6_ka.py  client_7_load_server.py  client_customer_after_activation.py  client_customer_emulator.py  client_customer_wait_for_positions.py  client_new_script.py  client_orig_customer_wait_for_positions.py  client_pos_and_ka_custom.py  client_standard_13.3.1.py  client_standard_13.3.2.py  client_standard_13.3.3.py  client_standard_13.4.1.py  client_standard_13.4.1_custom.py  client_standard_13.4.1_custom_tracking.py  client_standard_13.4.2.py  client_standard_13.4.3.py  client_standard_13.4.3_custom.py  client_standard_13.4.4-2.py  client_standard_13.4.4.py  client_standard_13.4.5-2.py  client_standard_13.4.5.py  client_standard_13.5.1.py  client_standard_13.5.2.py  client_standard_13.6.1.1.py  client_standard_13.6.1.2.py  client_standard_13.6.1.2_custom.py  client_standard_13.7.1.1.py  client_standard_13.7.1.1_customer.py  client_standard_13.7.1.2.py  client_standard_13.7.1.3.py  client_standard_13.7.1.4.py  server_2_configure.py  (+56 more)
e_libs/: BUILD  COPYING  Makefile  Makefile.am  Makefile.win  Makefile.win.in  Makefile.wm  NEWS  README  autogen.sh  config.status  configure.ac  e_libs-1.0.pc  e_libs-1.0.pc.in  e_libs.files  e_libs.h  e_libs.h-head  e_libs.h-tail  e_libs.includes  e_libs.sln  e_libs.spec  e_libs.vcproj  e_libs_buff-1.0.pc  e_libs_buff-1.0.pc.in  e_libs_check-1.0.pc  e_libs_check-1.0.pc.in  e_libs_conf-1.0.pc  e_libs_conf-1.0.pc.in  e_libs_config.h  e_libs_config.h.in  e_libs_crc-1.0.pc  e_libs_crc-1.0.pc.in  e_libs_net-1.0.pc.in  e_libs_test.vcproj  e_libs_utils-1.0.pc  e_libs_utils-1.0.pc.in  libtool  stamp-h1
e_libs/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
e_libs/doc/: AT_COMMANDS  Makefile  Makefile.in  libevent-1.4.12-mingw-dll.patch  wm_manifest.xml
e_libs/doxygen/: doxyfile  doxyfile.in
e_libs/src/: Makefile  Makefile.am  Makefile.in  Makefile.win  Makefile.win.in  e_buff.c  e_buff.h  e_client.h  e_client_addr.c  e_conf.c  e_conf.h  e_crc.c  e_crc.h  e_gprs.h  e_gps.h  e_io.h  e_log.c  e_log.h  e_mem.h  e_port.c  e_queue.c  e_queue.h  e_splint_macros.h  e_syslog.c  e_syslog.h  e_time.h  e_time_common.c  e_timer.h  e_units.c  e_units.h  e_util.c  e_util.h
e_libs/src/.deps/: e_buff.Plo  e_client.Plo  e_client_addr.Plo  e_conf.Plo  e_crc.Plo  e_gprs.Plo  e_gps.Plo  e_io.Plo  e_log.Plo  e_mem.Plo  e_port.Plo  e_queue.Plo  e_startup.Plo  e_syslog.Plo  e_time.Plo  e_time_common.Plo  e_timer.Plo  e_units.Plo  e_util.Plo
e_libs/src/linux-gnu/: e_client.c  e_gprs.c  e_gps.c  e_io.c  e_mem.c  e_port.h  e_startup.c  e_startup.h  e_time.c  e_timer.c  e_types.h
e_libs/src/wavecom/: e_client.c  e_errors.c  e_errors.h  e_errors_wip.c  e_errors_wip.h  e_gprs.c  e_gprs_wm.h  e_gps.c  e_gps_flash.c  e_gps_flash.h  e_gps_wm.h  e_io.c  e_io_wm.h  e_libs.h  e_libs_config.h  e_log_wm.c  e_log_wm.h  e_mem.c  e_port.h  e_startup.c  e_startup.h  e_time.c  e_timer.c
e_libs/src/win32/: e_libs.h  e_libs_config.h
e_libs/tests/: LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.win  Makefile.win.in  e_buff_test.c  e_check.h  e_check_extra.c  e_check_extra.h  e_conf_test.c  e_crc_test.c  e_log_test.c  e_minicheck.c  e_minicheck.h  e_port_test.c  e_queue_test.c  e_syslog_test.c  e_testall.c  e_timer_test.c  e_util_test.c  valgrind.supp
e_libs/tests/.deps/: e_check_extra.Plo  e_minicheck.Plo
e_libs/tests/cases/: e_conf_test_ok.conf
e_libs/win32/: installer.nsi
(+145 files in other folders)
